--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 吕天傲的小网站
 subtitle: '吕天傲'
 description: '这是一个自己的小网站'
 keywords:
-author: Peter lyu
+author: Peter Lyu
 language: zh-CN
 timezone: ''
 
@@ -44,6 +44,8 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
+top_image: false
+cover: /image/back.jpeg
 highlight:
   enable: true
   line_number: true
@@ -56,6 +58,7 @@ prismjs:
   preprocess: true
   line_number: true
   tab_replace: ''
+
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
