--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 吕天傲的小网站
+title: 吕天傲的网站
 subtitle: '吕天傲'
 description: '这是一个自己的小网站'
 keywords:
