--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -62,7 +62,7 @@ local_search:
 # About the per_page
 # if you set it to true, it will load mathjax/katex script in each page (true 表示每一頁都加載js)
 # if you set it to false, it will load mathjax/katex script according to your setting (add the 'mathjax: true' in page's front-matter)
-# (false 需要時加載，須在使用的 Markdown Front-matter 加上 mathjax: true)
+# (false 需要時加載，須在使用的 Markdown -matter 加上 mathjax: true)
 
 # MathJax
 mathjax:
@@ -90,14 +90,14 @@ avatar:
 index_img: /img/back.jpeg
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: false
+default_top_img: /img/img.jpg
 
 # The banner image of archive page
 archive_img: false
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img: back.jpeg
+tag_img: /img/back.jpeg
 
 # The banner image of tag page
 # format:
@@ -373,7 +373,7 @@ footer:
   owner:
     enable: true
     since: 2020
-  custom_text: A website is built in JUST TWO DAYS
+  custom_text:  A Website Which was Built in JUST TWO DAYS
   copyright: true # Copyright of theme and framework
   ICP: # Chinese ICP License
     enable: false
