--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -43,7 +43,7 @@ copy:
 social:
   fab fa-github: https://github.com/Peter-Lyu0325 || Github
   fas fa-envelope: mailto:peterlv@sjtu.edu.cn || Email
-  fab fa-weixin: /source/img/wechat.jpeg || Wechat
+# fab fa-weixin: https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MjM5NTAxNDE3Ng==&scene=124#wechat_redirect || Wechat
 # search (搜索)
 # --------------------------------------
 
