--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 吕天傲的网站
-subtitle: '吕天傲'
-description: '这是一个自己的小网站'
+title: 小吕吕的网站
+subtitle: 
+description: '一个金融考研人的网站'
 keywords:
 author: Peter Lyu
 language: zh-CN
