--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -10,7 +10,7 @@ menu:
   首页: / || fas fa-home
   时间轴: /archives/ || fas fa-archive
   Tags: /tags/ || fas fa-tags
-  分类: /categories/ || fas fa-folder-open
+  #分类: /categories/ || fas fa-folder-open
   # List||fas fa-list:
   #   - Music || /music/ || fas fa-music
   #   - Movie || /movies/ || fas fa-video
