--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 小吕吕的网站
-subtitle: 
-description: '一个金融考研人的网站'
+title: '无声新视界'
+subtitle: '聋人群体的小社区'
+description: ''
 keywords:
-author: Peter Lyu
+author: '管理员 何云祺'
 language: zh-CN
 timezone: ''
 
