--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 小吕吕的网站
+title: 无声新视界
 subtitle: 
-description: '一个金融考研人的网站'
+description: '聋人群体的社区'
 keywords:
-author: Peter Lyu
+author: 何云祺
 language: zh-CN
 timezone: ''
 
