--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -598,7 +598,8 @@ subtitle:
   sub:
     - 一直走，去看世界的尽头
     - 有一天一定会成为自己想成为的人
-
+    - 想留在这里的小空间
+    - 供以后的自己和你一起看
   
 
 # Loading Animation (加載動畫)
