--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 无声新视界
+title: 小吕吕的网站
 subtitle: 
-description: '一个聋哑人群互助平台'
+description: '一个金融考研人的网站'
 keywords:
-author: 吕天傲
+author: Peter Lyu
 language: zh-CN
 timezone: ''
 
