--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -788,7 +788,7 @@ baidu_push: false
 instantpage: false
 
 # https://github.com/vinta/pangu.js
-# Insert a space between Chinese character and English character (中英文之間添加空格)123
+# Insert a space between Chinese character and English character (中英文之間添加空格)
 pangu:
   enable: false
   field: site # site/post
