--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 小吕吕的网站
+title: 老吕头的网站
 subtitle: 
-description: '一个金融考研人的网站'
+description: '一个金融从业小白的网站'
 keywords:
 author: Peter Lyu
 language: zh-CN
